--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "promise-polyfill": "^6.0.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
