--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
+    "vue-screen": "^2.1.0-alpha.5",
+    "vue-screen-size": "^1.0.1",
     "vue3-youtube": "^0.1.8",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
