--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -21,6 +20,7 @@
     "vue-router": "^4.0.11",
     "vue-screen": "^2.1.0-alpha.5",
     "vue-screen-size": "^1.0.1",
+    "vue-snip": "^1.2.0",
     "vue3-youtube": "^0.1.8",
     "vuex": "^4.0.2",
     "yarn": "^1.22.17"
