--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+
+  "environment": {
+    "node": "14.17.3"
+  }, 
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.0.1",
     "@popperjs/core": "^2.10.2",
