--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-
   "environment": {
     "node": "14.17.3"
-  }, 
+  },
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.0.1",
     "@popperjs/core": "^2.10.2",
@@ -20,6 +19,7 @@
     "highlight.js": "^11.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "progress-tracker": "^2.0.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
     "vue-screen": "^2.1.0-alpha.5",
