--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "core-js": "^3.6.5",
         "highlight.js": "^11.2.0",
         "jquery": "^3.6.0",
+        "node-sass": "^6.0.1",
+        "npm-watch": "^0.11.0",
         "popper.js": "^1.16.1",
         "progress-tracker": "^2.0.6",
+        "sass-loader": "^12.3.0",
         "vue": "^3.0.0",
         "vue-router": "^4.0.11",
         "vue-screen": "^2.1.0-alpha.5",
