--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "core-js": "^3.6.5",
         "highlight.js": "^11.2.0",
         "jquery": "^3.6.0",
+        "node-sass": "^6.0.1",
         "popper.js": "^1.16.1",
         "progress-tracker": "^2.0.6",
         "vue": "^3.0.0",
@@ -37,7 +38,10 @@
         "@vue/compiler-sfc": "^3.0.0",
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
-        "eslint-plugin-vue": "^7.0.0"
+        "eslint-plugin-vue": "^7.0.0",
+        "sass": "^1.43.4",
+        "sass-loader": "7.3.1",
+        "webpack": "4.42.0"
     },
     "eslintConfig": {
         "root": true,
