--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "core-js": "^3.6.5",
         "highlight.js": "^11.2.0",
         "jquery": "^3.6.0",
+        "node-sass": "^4.14.1",
         "popper.js": "^1.16.1",
         "progress-tracker": "^2.0.6",
         "vue": "^3.0.0",
@@ -26,8 +27,7 @@
         "vue-screen-size": "^1.0.1",
         "vue-snip": "^1.2.0",
         "vue3-youtube": "^0.1.8",
-        "vuex": "^4.0.2",
-        "yarn": "^1.22.17"
+        "vuex": "^4.0.2"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
@@ -37,7 +37,8 @@
         "@vue/compiler-sfc": "^3.0.0",
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
-        "eslint-plugin-vue": "^7.0.0"
+        "eslint-plugin-vue": "^7.0.0",
+        "sass-loader": "^10.0.5"
     },
     "eslintConfig": {
         "root": true,
