--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
     "name": "itacademy-vue-elearning",
     "version": "0.1.0",
     "private": true,
+    "watch": {
+        "test": "{src,test}/*.js"
+    },
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "test": "tape test/*.js",
+        "watch": "npm-watch"
     },
     "environment": {
         "node": "14.17.3"
@@ -19,6 +24,7 @@
         "highlight.js": "^11.2.0",
         "jquery": "^3.6.0",
         "node-sass": "^4.14.1",
+        "npm-watch": "^0.11.0",
         "popper.js": "^1.16.1",
         "progress-tracker": "^2.0.6",
         "vue": "^3.0.0",
@@ -27,7 +33,8 @@
         "vue-screen-size": "^1.0.1",
         "vue-snip": "^1.2.0",
         "vue3-youtube": "^0.1.8",
-        "vuex": "^4.0.2"
+        "vuex": "^4.0.2",
+        "yarn": "^1.22.17"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
